pscprod1/prod/sso-oauth-authority/service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/probepath: /oauth/healthcheck?readinessProbe
  creationTimestamp: null
  labels:
    app: sso-oauth-authority
    env: prod
    maestro: "true"
    team: sso
  name: sso-oauth-authority
spec:
  ports:
  - name: http
    port: 0
    protocol: TCP
    targetPort: 0
  selector:
    app: sso-oauth-authority
status:
  loadBalancer: {}
